[Bug 886867] Fixing mosaic display overlap on Nexus 7.

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -532,6 +532,12 @@ body#home {
                     overflow: hidden;
                 }
             }
+            @media (max-width: 1024px) {
+                ul { 
+                    max-height: 295px;
+                    overflow: hidden;
+                }
+            }
         }
 
         #main-feature {
